--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.3.2
-flask_sqlalchemy==3.1.1
-python_bcrypt==0.3.2
+Flask>=2.3.2
+flask_sqlalchemy==3.0.5
+bcrypt==4.0.1
 SQLAlchemy==2.0.4
+Cx_Oracle==8.3.0
